force-app/main/default/objects/FieloEE__PromotionRule__c/FieloEE__PromotionRule__c.object-meta.xml
<CustomObject>
    <description>The rules for each promotion.</description>
    <label>Promotion Rule</label>
    <nameField>
        <displayFormat>CR-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Rule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>