force-app/main/default/objects/FieloEE__PromotionRule__c/fields/FieloEE__Order__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Order__c</fullName>
    <label>Order</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>