force-app/main/default/objects/FieloEE__PromotionRule__c/fields/FieloEE__Promotion__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Promotion__c</fullName>
    <description>Promotion - Master object in this relation</description>
    <label>Promotion</label>
    <referenceTo>FieloEE__Promotion__c</referenceTo>
    <relationshipLabel>Rules</relationshipLabel>
    <relationshipName>PromotionRules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>