force-app/main/default/objects/FieloEE__PromotionRule__c/fields/FieloEE__Rule__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Rule__c</fullName>
    <description>Rule that belongs to the promotion</description>
    <label>Rule</label>
    <referenceTo>FieloEE__Rule__c</referenceTo>
    <relationshipLabel>Rules</relationshipLabel>
    <relationshipName>PromotionsRules</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>